# wordmatch_pattern

./: .gitignore  CHANGELOG.md  README.md  match  pattern_model.json  pattern_prob.py  pyproject.toml  train  words.txt
legacy/: pattern_prob.py
pattern/: __init__.py  __main__.py  ports.py
pattern/adapters/: __init__.py  cli.py  file_word_source.py  joblib_model_store.py  json_model_store.py  match_cli.py  train_cli.py
pattern/application/: __init__.py  query.py  train.py
pattern/domain/: __init__.py  inference.py  model.py  training.py
pattern/ports/: __init__.py  model_store.py
pattern_prob/: __init__.py  __main__.py  adapters.py  domain.py  service.py  train_cli.py
src/pattern/: __main__.py
src/pattern/adapters/: __init__.py  file_word_source.py  json_model_store.py  train_cli.py
src/pattern/application/: __init__.py
src/pattern/domain/: __init__.py  inference.py  model.py  training.py
src/pattern/ports/: model_store.py  word_source.py
tests/adapters/: __init__.py  test_file_word_source.py  test_joblib_model_store.py  test_json_model_store.py
tests/application/: __init__.py  test_query.py  test_train.py
tests/domain/: __init__.py  test_inference.py  test_model.py  test_training.py
