[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pattern"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["joblib"]

[tool.hatch.build.targets.wheel]
packages = ["pattern"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
train = "pattern.adapters.train_cli:main"
match = "pattern.adapters.match_cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
